Fix overflow issue on mobile

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -40,6 +40,7 @@ a:visited {
   background-color: #1a1a1a; // Grey10
   color: #7f7f7f; // Grey50
   padding: 4px;
+  overflow: scroll;
   
   // comment
   .cm,
